# ChangeLog for net-nntp/sn
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/sn/ChangeLog,v 1.4 2007/02/09 04:58:44 flameeyes Exp $

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  16 May 2005; Sven Wegener <swegener@gentoo.org> sn-0.3.8.ebuild:
  Added cross-compile support.

*sn-0.3.8 (17 Jan 2005)

  17 Jan 2005; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  +sn-0.3.8.ebuild:
  Moved from net-news/sn to net-nntp/sn.

  05 Dec 2004; Sven Wegener <swegener@gentoo.org> -sn-0.3.7.ebuild:
  Removed old ebuild.

  13 Nov 2004; Sven Wegener <swegener@gentoo.org> sn-0.3.8.ebuild:
  Marked stable on x86.

*sn-0.3.8 (12 Aug 2004)

  12 Aug 2004; Sven Wegener <swegener@gentoo.org> +sn-0.3.8.ebuild:
  Version bump.

  30 Jul 2004; Sven Wegener <swegener@gentoo.org> -sn-0.3.6.ebuild:
  Removed old ebuild.

  22 Jul 2004; Sven Wegener <swegener@gentoo.org> sn-0.3.7.ebuild:
  Marked stable on x86.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> sn-0.3.6.ebuild,
  sn-0.3.7.ebuild:
  virtual/glibc -> virtual/libc

  19 Jun 2004; David Holm <dholm@gentoo.org> sn-0.3.7.ebuild:
  Added to ~ppc.

*sn-0.3.7 (19 Jun 2004)

  19 Jun 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  sn-0.3.6.ebuild, +sn-0.3.7.ebuild:
  Version bump. Made CFLAGS aware. Fixed parallel build error. Updated
  dependencies. Added IUSE="". Added metadata.xml.

*sn-0.3.6 (05 Mar 2003)

  05 Mar 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #16839.

*sn-0.3.5 (31 Dec 2002)

  31 Dec 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Christian Dietl <christian@expires.de>.