@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/sn/sn-0.3.8.ebuild,v 1.2 2005/05/16 17:08:34 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/sn/sn-0.3.8.ebuild,v 1.3 2009/09/23 19:45:43 patrick Exp $
 
 inherit toolchain-funcs
 
@@ -13,8 +13,7 @@ SLOT="0"
 LICENSE="GPL-2"
 IUSE=""
 
-RDEPEND="virtual/libc
-	sys-libs/zlib"
+RDEPEND="sys-libs/zlib"
 DEPEND="${RDEPEND}
 	>=sys-apps/sed-4"
 
