@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/sn
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/sn/ChangeLog,v 1.4 2007/02/09 04:58:44 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/sn/ChangeLog,v 1.5 2009/09/23 19:45:43 patrick Exp $
+
+  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> sn-0.3.8.ebuild:
+  Remove virtual/libc
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
